<resources>
    <string name="app_name">Howitzer 155 Mm</string>
    <string name="introduction_And_properties">Introduction and Properties</string>
    <string name="Tanseq_Elmadfaa3">Tanseq Elmadfaa3</string>
    <string name="Tawgieh_Eldirector">Tawgieh El Director</string>
    <string name="Tawgieh_Elmadfaa3">Tawgieh Elmadfaa3</string>
    <string name="Tawleef_Elmadfaa3">Tawleef Elmadfaa3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="A.R.D">A.R.D</string>
    <string name="degree">Degree</string>
    <string name="deci">Deci</string>
    <string name="mils">Mils</string>
    <string name="Rabt_Qeta3">Rabt Qeta3</string>
    <string name="Qeta3_number">#qeta3_number</string>
    <string name="Distance">distance</string>
    <string name="Direction">direction</string>
    <string name="Distance_Fix">distance_fix</string>
    <string name="Direction_Fix">direction_fix</string>
    <string name="Height">height</string>
    <string name="En7raf">En7raf</string>
    <string name="Right">R</string>
    <string name="Left">L</string>
    <string name="A5r_Marbotaah">A5r_Marbotaah</string>
</resources>
