<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Section 1 -->
            <LinearLayout
                android:id="@+id/section_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/section_1.1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/A.R.D_TextBox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@id/A.R.D_Value"
                        android:text="@string/A.R.D"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/A.R.D_Value"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint=" 00-00 "
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@id/A.R.D_Value"
                        android:text="@string/deci"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/section_1.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/A.R.D"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/A.R.D_Value_degree"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/degree"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/A.R.D_Value_mils"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mils"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>


            <!-- section 2 -->
            <LinearLayout
                android:id="@+id/section_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <!-- Raqm El Qeta3 input -->
                <LinearLayout
                    android:id="@+id/section_2.1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Qeta3_number" />

                    <EditText
                        android:id="@+id/input_raqm_elQeta3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint=" 101 "
                        android:inputType="number" />
                </LinearLayout> <!-- end of section 2.1 -->


                <!-- Distance input -->
                <LinearLayout
                    android:id="@+id/section_2.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Distance" />

                    <EditText
                        android:id="@+id/input_distance"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="6450"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Distance_Fix" />

                    <EditText
                        android:id="@+id/input_distance_fix"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="100+"
                        android:inputType="numberDecimal|numberSigned" />

                </LinearLayout> <!-- end of section 2.2 -->


                <!-- Direction  input -->
                <LinearLayout
                    android:id="@+id/section_2.3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Direction" />

                    <EditText
                        android:id="@+id/input_direction"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="6450"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Direction_Fix" />

                    <EditText
                        android:id="@+id/input_direction_fix"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="30+"
                        android:inputType="numberDecimal|numberSigned" />

                </LinearLayout> <!-- end of section 2.3 -->

                <!-- Solve btn -->
                <Button
                    android:id="@+id/solve_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text=" Solve " /><!-- end of btn 2.4 -->


                <!-- Height output -->
                <LinearLayout
                    android:id="@+id/section_2.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Height" />

                    <TextView
                        android:id="@+id/output_hieght"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/mils" />
                </LinearLayout> <!-- end of section 2.5 -->


                <!-- En7raf output -->
                <LinearLayout
                    android:id="@+id/section_2.6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/En7raf" />

                    <TextView
                        android:id="@+id/output_En7raf"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border" />

                    <TextView
                        android:id="@+id/En7raf_Sign"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout> <!-- end of section 2.6 -->


                <!-- A5r Marbotaah  -->
                <LinearLayout
                    android:id="@+id/section_2.7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/A5r_Marbotaah" />

                    <TextView
                        android:id="@+id/output_A5r_marbotaah"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border" />

                </LinearLayout> <!-- end of section 2.7 -->

            </LinearLayout> <!-- End of Section 2 -->

        </LinearLayout> <!-- End of Root -->
    </LinearLayout>
</ScrollView>